Try upgrading setuptools and pip

--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -44,6 +44,9 @@ jobs:
         with:
           ref: ${{ inputs.ffcx_ref }}
 
+      - name: Upgrade pip and setuptools
+        run: python -m pip install setuptools pip --upgrade
+
       - name: Build wheel
         run: python setup.py bdist_wheel
 
