--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,9 @@ install_requires =
     fenics-basix >= 0.3.1.dev0, <0.4.0
     fenics-ufl >= 2021.1.0, <2021.2.0
 
+[options.packages.find]
+where = ffcx
+
 [options.extras_require]
 docs = sphinx; sphinx_rtd_theme
 lint = flake8; pydocstyle[toml]
