--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 include AUTHORS
 include COPYING
 include COPYING.LESSER
-include ChangeLog
+include ChangeLog.rst
 include INSTALL
 include LICENSE
 include ffcx/codegeneration/ufc.h
