--- a/setup.cfg
+++ b/setup.cfg
@@ -48,7 +48,7 @@ install_requires =
     fenics-ufl >= 2021.1.0, <2021.2.0
 
 [options.packages.find]
-where = ffcx
+exclude = test
 
 [options.extras_require]
 docs = sphinx; sphinx_rtd_theme
