--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,11 +1,9 @@
 include AUTHORS
 include COPYING
 include COPYING.LESSER
-include ChangeLog
-include ChangeLog.uflacs
+include ChangeLog.rst
 include INSTALL
 include LICENSE
-include requirements.txt
 include ffcx/codegeneration/ufc.h
 recursive-include demo *
 recursive-include doc *
