--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 # future
 [metadata]
 name = fenics-ffcx
-version = 0.3.1.dev0
+version = 0.4.0
 author = FEniCS Project Contributors
 email = fenics-dev@googlegroups.com
 maintainer = FEniCS Project Steering Council
@@ -44,7 +44,7 @@ setup_requires =
 install_requires =
     numpy
     cffi
-    fenics-basix >= 0.3.1.dev0, <0.4.0
+    fenics-basix >= 0.4.0, <0.5.0
     fenics-ufl >= 2021.1.0, <2021.2.0
 
 [options.extras_require]
