--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: Static check with mypy
         run: |
-          python -m pip install mypy
+          python -m pip install mypy types-setuptools
           python -m mypy ffcx/
 
       - name: Check documentation style
