--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -54,6 +54,11 @@ jobs:
         run: |
           python -m flake8 --statistics ffcx/ test/
 
+      - name: Static check with mypy
+        run: |
+          python -m pip install mypy types-setuptools
+          python -m mypy ffcx/
+
       - name: Check documentation style
         run: |
           python -m pydocstyle .
