Use UFL main branch

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Install FEniCS dependencies (Python)
         run: |
           python -m pip install --upgrade pip setuptools
-          python -m pip install git+https://github.com/FEniCS/ufl.git@jpdean/meshview
+          python -m pip install git+https://github.com/FEniCS/ufl.git
           python -m pip install git+https://github.com/FEniCS/basix.git
 
       - name: Install FFCx
