- Rename ufc.h -> ufcx.h - Add CMake files to install ufcx.h

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,7 +4,7 @@ include COPYING.LESSER
 include ChangeLog.rst
 include INSTALL
 include LICENSE
-include ffcx/codegeneration/ufc.h
+include ffcx/codegeneration/ufcx.h
 recursive-include demo *
 recursive-include doc *
 recursive-include ffcx *.in
