Move CI deps to central location

--- a/setup.cfg
+++ b/setup.cfg
@@ -57,6 +57,8 @@ ci =
     coveralls
     pytest-cov
     pytest-xdist
+    mypy
+    types-setuptools
     fenics-ffcx[docs]
     fenics-ffcx[lint]
     fenics-ffcx[optional]
