--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -45,13 +45,10 @@ jobs:
           ref: ${{ inputs.ffcx_ref }}
 
       - name: Upgrade pip and setuptools
-        run: python -m pip install setuptools pip --upgrade
+        run: python -m pip install setuptools pip build --upgrade
 
-      - name: Build wheel
-        run: python setup.py bdist_wheel
-
-      - name: Build sdist
-        run: python setup.py sdist --formats=bztar,gztar
+      - name: Build sdist and wheel
+        run: python -m build
 
       - uses: actions/upload-artifact@v2
         with:
