Disable a bunch of pydocstyle warnings

--- a/setup.cfg
+++ b/setup.cfg
@@ -71,3 +71,8 @@ max-line-length = 120
 exclude = .git,__pycache__,docs/source/conf.py,build,dist,libs
 ignore = W503,  # Line length
          E741   # Variable names l, O, I, ...
+
+[pydocstyle]
+ignore = D100, D101, D102, D103, D104, D107, D105,
+         D201, D203, D205, D212, D213,
+         D400, D401, D406, D407, D413, D415, D416, D417
