--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -48,7 +48,8 @@ jobs:
 
       - name: Install FFCx
         run: |
-          python -m pip install .[ci]
+          python -m pip install .
+          # python -m pip install .[ci]
 
       - name: Lint with flake8
         run: |
