Move CI deps to central location (#442)
Co-authored-by: Garth N. Wells <gnw20@cam.ac.uk>

--- a/setup.cfg
+++ b/setup.cfg
@@ -58,6 +58,8 @@ ci =
     coveralls
     pytest-cov
     pytest-xdist
+    mypy
+    types-setuptools
     fenics-ffcx[docs]
     fenics-ffcx[lint]
     fenics-ffcx[optional]
