--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -42,8 +42,7 @@ jobs:
 
       - name: Install FEniCS dependencies (Python)
         run: |
-          python -m pip install --upgrade pip setuptools
-          python -m pip install git+https://github.com/FEniCS/ufl.git@michal/expressions
+          python -m pip install git+https://github.com/FEniCS/ufl.git
           python -m pip install git+https://github.com/FEniCS/basix.git
 
       - name: Install FFCx
