--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,7 @@ install_requires =
 [options.extras_require]
 docs = sphinx; sphinx_rtd_theme
 lint = flake8; pydocstyle[toml]
-optional = pygraphviz == 1.7
+optional = pygraphviz >= 1.7
 test = pytest >= 6.0; sympy
 ci =
     coverage
