--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: ['3.7', '3.8', '3.9', '3.10']
+        python-version: ['3.8', '3.9', '3.10']
 
     steps:
       - name: Checkout FFCx
@@ -42,8 +42,7 @@ jobs:
 
       - name: Install FEniCS dependencies (Python)
         run: |
-          python -m pip install --upgrade pip setuptools
-          python -m pip install git+https://github.com/FEniCS/ufl.git@michal/expressions
+          python -m pip install git+https://github.com/FEniCS/ufl.git
           python -m pip install git+https://github.com/FEniCS/basix.git
 
       - name: Install FFCx
