--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Install FEniCS dependencies (Python)
         run: |
-          python -m pip install git+https://github.com/FEniCS/ufl.git
+          python -m pip install git+https://github.com/FEniCS/ufl.git@michal/py-form-files
           python -m pip install git+https://github.com/FEniCS/basix.git
 
       - name: Install FFCx
@@ -82,9 +82,13 @@ jobs:
         # when there are test failures
         if: always()
 
-      - name: Runs demos
+      - name: Compile UFL demos
         run: |
-          python -m pytest demo/test_demos.py
+          git clone https://github.com/FEniCS/ufl.git@michal/py-form-files
+          cd ufl/demo
+          # Compile UFL demos which does not begin with underscore
+          shopt -s extglob
+          for file in !(_*).py; do echo "Compiling $file"; ffcx $file; CPATH=../../ffcx/ffcx/codegeneration/ gcc -shared ${file%.py}.c -o ${file%.py}.so -Wall -Werror || break; done;
 
       - name: Build documentation
         run: |
