--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,7 @@ install_requires =
     numpy
     cffi
     fenics-basix >= 0.3.1.dev0, <0.4.0
-    fenics-ufl >= 2021.1.0, <2021.2.99
+    fenics-ufl >= 2021.2.0.dev0, <2021.3.0
 
 [options.extras_require]
 docs = sphinx; sphinx_rtd_theme
