--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -13,6 +13,9 @@ on:
   pull_request:
     branches:
       - main
+  schedule:
+    # '*' is a special character in YAML, so string must be quoted
+    - cron: "0 1 * * *"
 
 jobs:
   build:
