--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=58", "wheel"]
+requires = ["setuptools>=58,<61", "wheel"]
 
 build-backend = "setuptools.build_meta"
 
