--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,7 @@ install_requires =
     numpy
     cffi
     fenics-basix >= 0.4.1.dev0, <0.5.0
-    fenics-ufl >= 2022.1.0, <2022.3.0
+    fenics-ufl >= 2022.2.0.dev0, <2022.3.0
 
 [options.extras_require]
 docs = sphinx; sphinx_rtd_theme
