--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 # future
 [metadata]
 name = fenics-ffcx
-version = 0.4.1.dev0
+version = 0.4.1
 author = FEniCS Project Contributors
 email = fenics-dev@googlegroups.com
 maintainer = FEniCS Project Steering Council
@@ -45,8 +45,8 @@ setup_requires =
 install_requires =
     numpy
     cffi
-    fenics-basix >= 0.4.1.dev0, <0.5.0
-    fenics-ufl >= 2022.2.0.dev0, <2022.3.0
+    fenics-basix >= 0.4.0, <0.5.0
+    fenics-ufl >= 2022.1.0, <2022.2.0
 
 [options.extras_require]
 docs = sphinx; sphinx_rtd_theme
@@ -74,4 +74,3 @@ max-line-length = 120
 exclude = .git,__pycache__,docs/source/conf.py,build,dist,libs
 ignore = W503,  # Line length
          E741   # Variable names l, O, I, ...
-
