--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -63,17 +63,21 @@ jobs:
         with:
           name: artifact
           path: dist
-
-      - uses: pypa/gh-action-pypi-publish@v1.5.0
+      
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@v1.5.0
         if: ${{ github.event.inputs.pypi_publish }}
         with:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
           repository_url: https://upload.pypi.org/legacy/
-
-      - uses: pypa/gh-action-pypi-publish@v1.5.0
+          verbose: true
+      
+      - name: Publish to Test PyPI
+        uses: pypa/gh-action-pypi-publish@v1.5.0
         if: ${{ github.event.inputs.test_pypi_publish }}
         with:
           user: __token__
           password: ${{ secrets.PYPI_TEST_TOKEN }}
           repository_url: https://test.pypi.org/legacy/
+          verbose: true
