Fix content type specifier

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ project_urls =
     Issues = https://github.com/FEniCS/ffcx/issues
     Funding = https://numfocus.org/donate
 long_description = file: README.rst
-long_description_content_type = text/rst
+long_description_content_type = text/x-rst
 license=LGPL-3.0-or-later
 classifiers =
     Development Status :: 5 - Production/Stable
