--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 # future
 [metadata]
 name = fenics-ffcx
-version = 0.4.1
+version = 0.4.1.post0
 author = FEniCS Project Contributors
 email = fenics-dev@googlegroups.com
 maintainer = FEniCS Project Steering Council
