--- a/.github/workflows/dolfin-tests.yml
+++ b/.github/workflows/dolfin-tests.yml
@@ -10,11 +10,11 @@ on:
     inputs:
       dolfinx_ref:
         description: "DOLFINx branch or tag"
-        default: "mscroggs/hermite"
+        default: "main"
         type: string
       basix_ref:
         description: "Basix branch or tag"
-        default: "mscroggs/hermite"
+        default: "main"
         type: string
       ufl_ref:
         description: "UFL branch or tag"
@@ -50,7 +50,7 @@ jobs:
         if: github.event_name != 'workflow_dispatch'
         run: |
           python3 -m pip install git+https://github.com/FEniCS/ufl.git
-          python3 -m pip install git+https://github.com/FEniCS/basix.git@mscroggs/hermite
+          python3 -m pip install git+https://github.com/FEniCS/basix.git
       - name: Install UFL and Basix (specified branches/tags)
         if: github.event_name == 'workflow_dispatch'
         run: |
@@ -67,7 +67,6 @@ jobs:
         with:
           path: ./dolfinx
           repository: FEniCS/dolfinx
-        ref: mscroggs/hermite
       - name: Get DOLFINx source (specified branch/tag)
         if: github.event_name == 'workflow_dispatch'
         uses: actions/checkout@v2
