--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -53,9 +53,9 @@ jobs:
         run: |
           python -m flake8 --statistics ffcx/ test/
 
-      - name: Static check with mypy
-        run: |
-          python -m mypy ffcx/
+      # - name: Static check with mypy
+      #   run: |
+      #     python -m mypy ffcx/
 
       - name: Check documentation style
         run: |
