--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -22,6 +22,10 @@ jobs:
         os: [ubuntu-latest]
         python-version: ['3.8', '3.9', '3.10']
 
+    env:
+      CC: gcc-10
+      CXX: g++-10
+
     steps:
       - name: Checkout FFCx
         uses: actions/checkout@v2
