--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 # future
 [metadata]
 name = fenics-ffcx
-version = 0.4.3.dev0
+version = 0.5.0
 author = FEniCS Project Contributors
 email = fenics-dev@googlegroups.com
 maintainer = FEniCS Project Steering Council
@@ -46,8 +46,8 @@ install_requires =
     numpy
     cffi
     setuptools
-    fenics-basix >= 0.4.2.dev0, <0.5.0
-    fenics-ufl >= 2022.2.0.dev0, <2022.3.0
+    fenics-basix >= 0.5.0, <0.6.0
+    fenics-ufl >= 2022.2.0, <2022.3.0
 
 [options.extras_require]
 docs = sphinx; sphinx_rtd_theme
