--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -46,8 +46,8 @@ jobs:
 
       - name: Install FEniCS dependencies (Python)
         run: |
-          python -m pip install git+https://github.com/FEniCS/ufl.git@2021.1.0
-          python -m pip install git+https://github.com/FEniCS/basix.git@v0.4.1
+          python -m pip install git+https://github.com/FEniCS/ufl.git
+          python -m pip install git+https://github.com/FEniCS/basix.git
 
       - name: Install FFCx
         run: |
