--- a/setup.cfg
+++ b/setup.cfg
@@ -52,7 +52,7 @@ install_requires =
 [options.extras_require]
 docs = sphinx; sphinx_rtd_theme
 lint = flake8; pydocstyle[toml]
-optional = pygraphviz
+optional = pygraphviz == 1.7
 test = pytest >= 6.0; sympy
 ci =
     coverage
