Another try to setup appropriate branch names in GitHub workflows

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -46,8 +46,8 @@ jobs:
 
       - name: Install FEniCS dependencies (Python)
         run: |
-          python -m pip install git+https://github.com/FEniCS/ufl.git@"${GITHUB_REF##*/}"
-          python -m pip install git+https://github.com/FEniCS/basix.git@"${GITHUB_REF##*/}"
+          python -m pip install git+https://github.com/FEniCS/ufl.git@"${{ github.ref_name }}"
+          python -m pip install git+https://github.com/FEniCS/basix.git@"${{ github.ref_name }}"
 
       - name: Install FFCx
         run: |
