Fix setup.cfg for flake8 6.x.y

--- a/setup.cfg
+++ b/setup.cfg
@@ -74,5 +74,8 @@ console_scripts =
 [flake8]
 max-line-length = 120
 exclude = .git,__pycache__,docs/source/conf.py,build,dist,libs
-ignore = W503,  # Line length
-         E741   # Variable names l, O, I, ...
+ignore =
+    # Line length
+    W503,
+    # Variable names l, O, I, ...
+    E741,
