--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Install FEniCS dependencies (Python)
         run: |
-          python -m pip install git+https://github.com/FEniCS/ufl.git
+          python -m pip install git+https://github.com/FEniCS/ufl.git@mscroggs/cell
           python -m pip install git+https://github.com/FEniCS/basix.git
 
       - name: Install FFCx
@@ -99,7 +99,7 @@ jobs:
         with:
           path: ./ufl
           repository: FEniCS/ufl
-          ref: main
+          ref: mscroggs/cell
 
       - name: Run FFCx and UFL demos
         run: |
