restore "ref: main"

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -99,6 +99,7 @@ jobs:
         with:
           path: ./ufl
           repository: FEniCS/ufl
+          ref: main
 
       - name: Run FFCx and UFL demos
         run: |
